Preparation for sending  emails

--- a/src/main/resources/rescapter.conf
+++ b/src/main/resources/rescapter.conf
@@ -6,3 +6,13 @@ system-vars {
     path_to_pandoc_exe=""
     path_to_kindlegen_exe=""
 }
+email-send {
+    host_name=""
+    smtp_port=""
+    email=""
+    password=""
+    from_name=""
+    bcc_list_html=""
+    bcc_list_epub=""
+    to_list_mobi=""
+}
